--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 theme: jekyll-theme-dinky
 title: Stuart Pullinger's Github Page
+
+permalink: https://github.com/stuartpullinger/icat_install
+permalink: https://github.com/stuartpullinger/stuartpullinger.github.io
